--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="text-container">
           <div class="main-text">
-            <div class="top-text">
+            <div>
               <h1>
                 Get
                 <span class="insights">insights</span>
@@ -81,7 +81,7 @@
           Frontend Mentor
         </a>
         . Coded by
-        <a href="#">Your Name Here</a>
+        <a href="https://github.com/WebDevCampos">Marcus Rangel</a>
         .
       </footer>
     </main>
