--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="text-container">
           <div class="main-text">
-            <div>
+            <section>
               <h1>
                 Get
                 <span class="insights">insights</span>
@@ -42,7 +42,7 @@
                 decisions regarding revenue, customer experience, and overall
                 efficiency.
               </p>
-            </div>
+            </section>
 
             <div class="stats">
               <div>
@@ -54,7 +54,7 @@
                 <p>templates</p>
               </div>
               <div>
-                <h2>12m+</h2>
+                <h2>12M+</h2>
                 <p>queries</p>
               </div>
             </div>
