--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             />
             <img
               src="/images/image-header-desktop.jpg"
-              alt="People working on data analytics"
+              alt=""
+aria-hidden=“true”
             />
           </picture>
         </div>
