--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             <div class="stats">
               <div>
                 <h2>
-                  <span class="tenK">0</span>
-                  k+
+                  <span class="tenK">0</span>k+
                 </h2>
                 <p>companies</p>
               </div>
@@ -58,8 +57,7 @@
               </div>
               <div>
                 <h2>
-                  <span class="twelveM">0</span>
-                  M+
+                  <span class="twelveM">0</span>M+
                 </h2>
                 <p>queries</p>
               </div>
