--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
             media="(max-width:768px)"
             srcset="./images/image-header-mobile.jpg"
           />
-          <img src="./images/image-header-desktop.jpg" />
+          <img
+            src="./images/image-header-desktop.jpg"
+            alt=""
+            aria-hidden="“true”"
+          />
         </picture>
       </div>
     </main>
